Se agregan cambios para PDF